# TP_C_HW1

./: .gitignore  CMakeLists.txt  README.md  input.txt
.github/workflows/: ci.yml
include/: array_tools.h  song_tools.h
linters/: run.sh
project/: CMakeLists.txt
project/include/: array_tools.h  parallel_processing.h  serial_processing.h  song_tools.h
project/src/: array_tools.c  main.c  parallel_processing.c  serial_processing.c  song_tools.c
src/: array_tools.c  main.c  song_tools.c
tests/: CMakeCache.txt  HW1  Makefile  array_tests.cpp  cmake_install.cmake  coverage.info  hw1.info  out.txt  parallel_tests.cpp  run_tests  serial_tests.cpp  song_tests.cpp
tests/report/: index-sort-f.html  index-sort-l.html  index.html
tests/report/src/: array_tools.c.func-sort-c.html  array_tools.c.func.html  array_tools.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  song_tools.c.func-sort-c.html  song_tools.c.func.html  song_tools.c.gcov.html
